Change to property in Skills section

--- a/index.html
+++ b/index.html
@@ -105,32 +105,32 @@
             <div class="row inner_skills_container">
                 <div class="col-xs-12 col-md-8 col-md-offset-2">
                     <div class="skill_shell">
-                        <div class="skill">
+                        <div class="border_skill">
                           <span class="skill_banner">HTML5</span>
                         </div>
                     </div>
                     <div class="skill_shell">
-                        <div class="skill">
+                        <div class="border_skill">
                           <span class="skill_banner">CSS3</span>
                         </div>
                     </div>
                     <div class="skill_shell">
-                        <div class="skill">
+                        <div class="border_skill">
                           <span class="skill_banner">JavaScript</span>
                         </div>
                     </div>
                     <div class="skill_shell">
-                        <div class="skill">
+                        <div class="border_skill">
                           <span class="skill_banner">Bootstrap</span>
                         </div>
                     </div>
                     <div class="skill_shell">
-                        <div class="skill">
+                        <div class="border_skill">
                           <span class="skill_banner">FlexBox</span>
                         </div>
                     </div>
                     <div class="skill_shell">
-                        <div class="skill">
+                        <div class="border_skill">
                           <span class="skill_banner">WordPress</span>
                         </div>
                     </div>
