Update to Skills section for HTML5 and CSS3
Preliminary changes to make the HTML5 and CSS3 skill icons more interactive.  The HTML5 on hover now changes the message. The CSS3 on hover now blacks out the screen and makes the CSS3 message larger and in white color.

Have to get the HTML5 message to change back to normal after javascript runs.  Also need to make sure that other elements can't be triggered while another is already running.  Might also want to make sure that events cannot be triggered more than once.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 </div><!-- /.container-fluid -->
             </nav>
         </header>
+        <div id="blackout"></div>
 
         <div class="container-fluid home_container" id="home">
             <h1>I'm Brent Robertson</h1>
@@ -106,32 +107,32 @@
                 <div class="col-xs-12 col-md-10 col-md-offset-1">
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner">HTML5</span>
+                          <span class="skill_banner" id="html">HTML5</span>
                         </div>
                     </div>
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner">CSS3</span>
+                          <span class="skill_banner" id="css">CSS3</span>
                         </div>
                     </div>
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner">JavaScript</span>
+                          <span class="skill_banner" id="javascript">JavaScript</span>
                         </div>
                     </div>
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner">Bootstrap</span>
+                          <span class="skill_banner" id="bootstrap">Bootstrap</span>
                         </div>
                     </div>
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner">FlexBox</span>
+                          <span class="skill_banner" id="flexbox">FlexBox</span>
                         </div>
                     </div>
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner">WordPress</span>
+                          <span class="skill_banner" id="wordpress">WordPress</span>
                         </div>
                     </div>
                 </div>
