Changes in the Skills section
On hover, all of the Skills circles say 'Click Me'. Added popover for the CSS3 skill after the first click so that it says it won't work again.  Made the animations activate on click instead of hover. Started setting up the animation between JS and WordPress circles -- namely, setup the popovers for the WordPress circle.

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                           <span class="skill_banner" id="flexbox">FlexBox</span>
                         </div>
                     </div>
-                    <div class="skill_shell">
-                        <div class="border_skill">
+                    <div class="skill_shell" data-toggle="popover">
+                        <div class="border_skill" id="popover_wordpress">
                           <span class="skill_banner" id="wordpress">WordPress</span>
                         </div>
                     </div>
