Changes to add more animation to the contact links at the bottom.
Also planning to revert Skills section back to static so that the CSS animation will work properly.

--- a/index.html
+++ b/index.html
@@ -279,19 +279,19 @@
                 <!-- Offset one for medium to provide spacing between form and links -->
                 <div class="col-xs-12 contact_links">
                     <ul>
-                        <a href="https://www.facebook.com/brent.robertson.56" target="_blank">
+                        <a href="https://www.facebook.com/brent.robertson.56" target="_blank" id="facebook">
                             <li><i class="fa fa-fw fa-facebook fa-2x"></i></li>
                         </a>
-                        <a href="https://www.linkedin.com/in/brentrobertson3" target="_blank">
+                        <a href="https://www.linkedin.com/in/brentrobertson3" target="_blank" id="linkedin">
                             <li><i class="fa fa-fw fa-linkedin fa-2x"></i></li>
                         </a>
-                        <a href="https://twitter.com/TechMeOut21" target="_blank">
+                        <a href="https://twitter.com/TechMeOut21" target="_blank" id="twitter">
                             <li><i class="fa fa-fw fa-twitter fa-2x"></i></li>
                         </a>
-                        <a href="http://www.tumblr.com/blog/baregeek" target="_blank">
+                        <a href="http://www.tumblr.com/blog/baregeek" target="_blank" id="tumblr">
                             <li><i class="fa fa-fw fa-tumblr fa-2x"></i></li>
                         </a>
-                        <a href="https://github.com/brobertson3" target="_blank">
+                        <a href="https://github.com/brobertson3" target="_blank" id="github">
                             <li><i class="fa fa-fw fa-github fa-2x"></i></li>
                         </a>
                     </ul>
