Changed CSS animation
CSS animation for the CSS skill now just spins.  The entire skills section is now static, not relative anymore.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                     <div class="skill_shell">
-                        <div class="border_skill">
+                        <div class="border_skill skill_relative">
                           <span class="skill_banner" id="javascript">JavaScript</span>
                         </div>
                     </div>
