Changes to match the colors to the theme.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 </div><!-- /.container-fluid -->
             </nav>
         </header>
+
         <div id="blackout"></div>
 
         <div class="container-fluid home_container" id="home">
@@ -220,7 +221,7 @@
 
                         <p class="brief_description">ReThree is an online tool, used to educate users on the three R’s: Reducing, Reusing, and Recycling.  This was the final project for my Front End Web Development course at <a href="https://generalassemb.ly/education/front-end-web-development" target="_blank">General Assembly</a>.</p>
                     <!-- TODO change the color of this on hover. -->
-                        <p id="read_more rethree_modal" data-toggle="modal" data-target="#rethree_modal"><a>Read More</a></p>
+                        <p id="read_more rethree_modal" data-toggle="modal" data-target="#rethree_modal"><a class="read_more_hover">Read More</a></p>
                     </div>
 
                     <!-- This is the container for the BareMedium Project. -->
@@ -239,7 +240,7 @@
                             <i class="fa fa-angle-double-left custom fa-2x hidden"></i>
                         </div>
                         <p class="brief_description">Well this should look familiar.  This is my portfolio project where I display some of my work, as well as tell you a little about myself.  I also freelance, so if you like what you see then <a href="#contact_me">contact me</a> below.</p>
-                        <p id="read_more baremedium_modal" data-toggle="modal" data-target="#baremedium_modal"><a>Read More</a></p>
+                        <p id="read_more baremedium_modal" data-toggle="modal" data-target="#baremedium_modal"><a class="read_more_hover">Read More</a></p>
                     </div>
 
                     <!-- This is the container for the Upcoming Chewzer Project. -->
@@ -251,7 +252,7 @@
                         </div>
                         <h3>Chewzer</h3>
                         <p class="brief_description">Chewzer is a collaborative project that I'm working on with the talented <a href="https://lindsayboylan.com/" target="_blank">Lindsay Boylan</a>.  This project suggests weekly meals based on your dietary restrictions and nutritional targets.</p>
-                        <p id="read_more"><a>Read More</a></p>
+                        <p id="read_more"><a class="read_more_hover">Read More</a></p>
                     </div>
                 </div>
             </div>
