Spinning images in the background.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
         </header>
 
         <div id="blackout"></div>
+        <i class="fa fa-pencil fa-5x fa-spin floating"></i>
+        <i class="fa fa-wifi fa-5x fa-spin floating"></i>
+        <i class="fa fa-i-cursor fa-5x fa-spin floating"></i>
+        <i class="fa fa-code fa-5x fa-spin floating"></i>
+        <i class="fa fa-headphones fa-5x fa-spin floating"></i>
+        <i class="fa fa-laptop fa-5x fa-spin floating"></i>
+        <i class="fa fa-sitemap fa-5x fa-spin floating"></i>
 
         <div class="container-fluid home_container" id="home">
             <h1>I'm Brent Robertson</h1>
