Changed how the About Me picture fades in.
Also made small changes to how the position of some of the spinning icons. The About Me picture was changed. The picture also fades in now and the text next to it waits to come in until it's fully visible.

--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
                     <span class="strike_through_text">About</span>
                 </span> Me
             </h2>
-                <div class="inner_about_container">
-                    <div class="main_image_container">
-                        <div class="main_image_div">
-                            <img class="main_image blurred_image" src="img/main_pic.jpg" alt="">
-                        </div>
-                        <div class="real_me hidden">
-                            <p>HAHA Get It?<p>
-                            <p>Blurred...<p>
-                            <p>Bare...</p>
-                            <p>Yeah...</p>
-                        </div>
+            <div class="inner_about_container">
+                <div class="main_image_container">
+                    <div class="main_image_div">
+                        <img class="main_image blurred_image" src="img/ProfessionalProfileImage.jpg" alt="">
                     </div>
-                    <p class="intro">Hmmm…where to start? I’m a dedicated dreamer from Baltimore, Maryland.  I’ve always had ambitions to create, probably because I have two insanely talented, creative, and artistic parents.  That passion led me to Front End Web Development, since it bridges the gap between my creative and technical skills.  What technical skills you ask…Oh…I forgot to mention that I’ve been a full-time Software Engineer since 2012.</p>
+                    <div class="real_me hidden">
+                        <p>HAHA Get It?<p>
+                        <p>Blurred...<p>
+                        <p>Bare...</p>
+                        <p>Yeah...</p>
+                    </div>
+                </div>
+                <p class="intro">Hmmm…where to start? I’m a dedicated dreamer from Baltimore, Maryland.  I’ve always had ambitions to create, probably because I have two insanely talented, creative, and artistic parents.  That passion led me to Front End Web Development, since it bridges the gap between my creative and technical skills.  What technical skills you ask…Oh…I forgot to mention that I’ve been a full-time Software Engineer since 2012.</p>
                 <!-- <p class="intro">I completed the Front End Web Development course at General Assembly in May 2016.  That was my springboard into this field and now I intend to use those skills to freelance.  My skills are constantly growing so you’re in good hands. My work, though not abundant at this point, speaks for itself, which creeped me out at first, but now I like what it has to say and I’m sure you will too. -psst- I made this site as well.</p> -->
                 <p>When I’m not coding I thoroughly enjoy:</p>
                 <ol class="hobbies_list">
