--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                 <p>Coming Soon!</p>
                             </div>
                         </div>
-                        <h3>Chewzer</h3>
+                        <h3 class="thumbnail_title">Chewzer</h3>
                         <p class="brief_description">Chewzer is a collaborative project that I'm working on with the talented <a href="https://lindsayboylan.com/" target="_blank">Lindsay Boylan</a>.  This project suggests weekly meals based on your dietary restrictions and nutritional targets.</p>
                         <p id="read_more"><a class="read_more_hover">Read More</a></p>
                     </div>
