Fixed problem with the contact me emailing system.

--- a/index.html
+++ b/index.html
@@ -273,11 +273,10 @@
                     <!-- Small screen I want each to take up entire width.
                     Medium and up it can go side by side. -->
                     <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 contact_form">
-                        <form action="mailto:brent.robertson3@gmail.com" enctype="text/plain" method="post" id="contact_form">
+                        <form action="mailto:brent.robertson3@gmail.com?subject=Interested in working together." enctype="text/plain" method="POST" id="contact_form">
                             <div class="form-group">
                                 <label for="inputName">Name:</label>
                                 <input type="text" class="form-control" name="Name" id="inputName" placeholder="Full Name">
-                            <!-- <input name="Name" type="text" id="Name" size="40"> -->
                             </div>
                             <div class="form-group">
                                 <label for="inputEmail">Email:</label>
