--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
         </header>
 
         <div id="blackout"></div>
-        <i class="fa fa-pencil fa-5x fa-spin floating"></i>
-        <i class="fa fa-wifi fa-5x fa-spin floating"></i>
-        <i class="fa fa-i-cursor fa-5x fa-spin floating"></i>
-        <i class="fa fa-code fa-5x fa-spin floating"></i>
-        <i class="fa fa-headphones fa-5x fa-spin floating"></i>
-        <i class="fa fa-laptop fa-5x fa-spin floating"></i>
-        <i class="fa fa-sitemap fa-5x fa-spin floating"></i>
+        <i class="fa fa-pencil fa-5x floating"></i>
+        <i class="fa fa-wifi fa-5x floating"></i>
+        <i class="fa fa-i-cursor fa-5x floating"></i>
+        <i class="fa fa-code fa-5x floating"></i>
+        <i class="fa fa-headphones fa-5x floating"></i>
+        <i class="fa fa-laptop fa-5x floating"></i>
+        <i class="fa fa-sitemap fa-5x floating"></i>
+        <i class="fa fa-gamepad fa-5x floating"></i>
 
         <div class="container-fluid home_container" id="home">
             <h1>I'm Brent Robertson</h1>
@@ -273,7 +274,7 @@
                     <!-- Small screen I want each to take up entire width.
                     Medium and up it can go side by side. -->
                     <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 contact_form">
-                        <form action="mailto:brent.robertson3@gmail.com?subject=Interested in working together." enctype="text/plain" method="POST" id="contact_form">
+                        <form action="mailto:brent.robertson3@gmail.com?subject=Interested in working together" enctype="text/plain" method="POST" id="contact_form">
                             <div class="form-group">
                                 <label for="inputName">Name:</label>
                                 <input type="text" class="form-control" name="Name" id="inputName" placeholder="Full Name">
